Laptop Version overflow fixing

--- a/Styles/library.css
+++ b/Styles/library.css
@@ -2,6 +2,7 @@
   
   body {
     margin: 0;
+    overflow-x: hidden;
     
   }
   
@@ -151,11 +152,13 @@ font-size: 2.5rem;
 
 @media (min-width: 1024px) and (max-width: 1366px) {
   .column {
-      float: left;
+      
+      margin: 0;
       width: 20%;
       padding: 10px;
-      margin-left: 1.4rem;
+      margin-left: 1rem;
       align-items: center;
       text-align: center;
+    
   }
 }
